--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/intellij+all,visualstudiocode
-# Edit at https://www.toptal.com/developers/gitignore?templates=intellij+all,visualstudiocode
+# Created by https://www.toptal.com/developers/gitignore/api/intellij+all,visualstudiocode,macos
+# Edit at https://www.toptal.com/developers/gitignore?templates=intellij+all,visualstudiocode,macos
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -94,6 +94,35 @@ modules.xml
 # Sonarlint plugin
 .idea/sonarlint
 
+### macOS ###
+# General
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
@@ -110,4 +139,4 @@ modules.xml
 .history
 .ionide
 
-# End of https://www.toptal.com/developers/gitignore/api/intellij+all,visualstudiocode
+# End of https://www.toptal.com/developers/gitignore/api/intellij+all,visualstudiocode,macos
